# cppguidebook

./: .gitignore  404.html  CMakeLists.txt  CNAME  README.md  book.typ  cppguidebook.typ  e1.cpp  extra.css  extra.js  functions.md  index.html  index.md  iostream.buf.md  iostream.stdio.md  main.py  mkdocs.yml  requirements.txt  test.typ
.github/workflows/: generate_release_pdf.yml
about/: index.html
auto/: index.html
best_3rd_libs/: index.html
cmake_tutor/: index.html
cpp_lifetime/: index.html
cpp_memory/: index.html
cpp_tricks/: index.html
css/: print-site-mkdocs.css
cuda/moderncuda/: README.md  cudapp.cuh  main.cu
cuda_intro/: index.html
cudaguide/1_moderncuda/: README.md  main.cu
cudaguide/2_cudastream/: CMakeLists.txt  cudapp.cuh  demo.cc  main.cu
cudaguide/3_gridstrideloop/: README.md  main.cu
cudaguide/4_parallelfor/: cudapp.cuh  main.cu
cudaguide/5_reverse/: CMakeLists.txt  main.cu
cudaguide/6_parallelreduce/: CMakeLists.txt  main.cu
design/: index.html
design_concept/: index.html
design_erasure/: index.html
design_functor/: index.html
design_gamedev/: index.html
design_overview/: index.html
design_variant/: index.html
design_virtual/: index.html
docs/: about.md  auto.md  best_3rd_libs.md  cmake_tutor.md  cpp_lifetime.md  cpp_memory.md  cpp_thread.md  cpp_tricks.md  cuda_intro.md  design.md  design_concept.md  design_erasure.md  design_functor.md  design_gamedev.md  design_overview.md  design_variant.md  design_virtual.md  donate.md  error_code.md  extra.css  extra.js  functional.md  functions.md  hello_world.md  helloworld.md  index.md  interview.md  lambda.md  llvm_intro.md  no_more_new.md  platform.md  recommend.md  start.md  stl_map.md  struct_layout.md  symbols.md  test_and_safe.md  threading.md  type_rich_api.md  undef.md  (+3 more)
docs/stylesheets/: extra.css
donate/: index.html
error_code/: index.html
examples/: boost_utf_conv.cpp  cpp_casts.cpp  date_time.cpp  error_code.cpp  fixed_point.hpp  locale_conv.cpp  locale_gen.cpp  locale_wctype.cpp  memory_view.h  multimap.cpp  struct_layout.cpp  tl-expected.hpp  try_emplace.cpp  wcout.cpp
examples/llvm/: a.bc  a.cpp  a.ll
examples/moderncuda/: main.cu
functional/: index.html
functions/: index.html
hello_world/: index.html
helloworld/: index.html
interview/: index.html
lambda/: index.html
llvm_intro/: index.html
misc/: afdian.py  export_to_pdf.js  font_header.html
misc/typst/: cppguidebook.typ  test.typ  unicode.typ
no_more_new/: index.html
platform/: index.html
print_page/: index.html
recommend/: index.html
search/: search_index.json
start/: index.html
stl_map/: index.html
struct_layout/: index.html
symbols/: index.html
test_and_safe/: index.html
threading/: index.html
type_rich_api/: index.html
undef/: index.html
unicode/: index.html
variable_types/: index.html
vartypes/: index.html
warnings/: index.html
